--- a/style.css
+++ b/style.css
@@ -16,7 +16,10 @@ body {font-family: Arial, Helvetica, sans-serif;
   position: relative;
 }
 
-
+.navigation {
+  display: flex;
+  flex-direction: row;
+}
 
 .container {
   position: absolute;
